--- a/map/css/style.css
+++ b/map/css/style.css
@@ -1,7 +1,114 @@
-body{
+body > * {
     margin: 0;
+    box-sizing: border-box;
+}
+.container{
+    width: 100vw;
+    height: 100vh;
 }
 
-.container * {
+.container > .map {
     position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.overlay{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    background-color: #F1F4F3;
+}
+.search-box{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(3px);
+    border-radius: 10px;
+
+    height: fit-content;
+
+    display: flex;
+    gap: 2%;
+}
+.search-bars{
+    font-family: Oxygen;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.9vh;
+}
+.search-bars > div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+.search-bars input {
+    border: none;
+    background-color: transparent;
+    flex-grow: 1;
+    border-radius: 3px;
+    padding: 5px 4px;
+}
+.search-bars input::placeholder{
+    color: var(--font-color);
+    font-size: 14px;
+}
+
+.search-bars input:focus{
+    outline: none;
+    background-color: #ececec;
+}
+
+.subtext{
+    font-size: 10px;
+    font-weight: bold;
+    padding: 0 2px;
+    color: var(--font-subtext-color)
+}
+
+
+.dots{
+    display: flex;
+    width: 2.2%;
+    padding: 8px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10%;
+}
+.dots > span {
+    border-radius: 50%;
+    width: 9px;
+    aspect-ratio: 1 / 1;
+}
+.dots :first-child{
+    background-color: #3744FA;
+}
+.dots :last-child{
+    background-color: #01C72E;
+}
+.line{
+    width: 1px;
+    background-color: #3744FA;
+    flex-grow: 1;
+}
+@media (orientation: portrait) {
+    .search-bars{
+        width: 90vw;
+    }
+    .search-box{
+        padding: 2% 3%;
+    }
+
+}
+
+@media (orientation: landscape) {
+    .search-bars{
+        width: 40vw;
+    }
+    .search-box{
+        padding: 0.5% 1%;
+    }
+
 }
