--- a/map/css/style.css
+++ b/map/css/style.css
@@ -112,3 +112,50 @@ body > * {
     }
 
 }
+
+
+
+/*  Options */
+.options{
+    position: fixed;
+    align-self: self-end;
+    right: 0;
+    padding: 20px 10px;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.options > .icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(3px);
+    /* Note: backdrop-filter has minimal browser support */
+    width: 60px;
+    aspect-ratio: 1 / 1;
+    border-radius: 75px;
+}
+
+.options > .icons{
+    visibility: hidden;
+    transform: translateY(500%);
+    visibility: hidden;
+    transition: 
+    opacity 0.3s ease-in-out,
+    transform 0.3s ease-in-out,
+    visibility 0.3s ease-in-out;
+}
+
+.options > .icons:last-child{
+    visibility: visible;
+    transform: translateX(0px);
+}
+
+.options > .icons.visible {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible;
+}
